--- a/data-lineage-spfx/package.json
+++ b/data-lineage-spfx/package.json
@@ -25,7 +25,7 @@
     "cytoscape": "^3.26.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "xlsx": "^0.18.5"
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz"
   },
   "devDependencies": {
     "@microsoft/rush-stack-compiler-4.7": "0.1.0",
@@ -42,6 +42,39 @@
     "eslint": "^8.57.1",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
-    "typescript": "5.4.5"
+    "typescript": "5.4.5",
+    "webpack-bundle-analyzer": "^4.10.2"
+  },
+  "overrides": {
+    "body-parser": "^1.20.3",
+    "braces": "^3.0.3",
+    "micromatch": "^4.0.8",
+    "semver": "^7.6.3",
+    "tough-cookie": "^5.0.0",
+    "webpack": "^5.94.0",
+    "cookie": "^0.7.0",
+    "express": "^4.21.0",
+    "send": "^0.19.0",
+    "serve-static": "^1.16.0",
+    "form-data": "^4.0.4",
+    "got": "^11.8.6",
+    "node-notifier": "^10.0.1",
+    "tmp": "^0.2.4",
+    "validator": "^13.15.16",
+    "yargs-parser": "^21.1.1",
+    "path-to-regexp": "^0.1.12",
+    "execa": "^5.1.1",
+    "anymatch": "^3.1.3",
+    "glob-parent": "^6.0.2",
+    "request": "npm:@cypress/request@^3.0.5",
+    "jsdom": "^25.0.1",
+    "z-schema": "^6.0.2",
+    "cssnano": "^4.1.11",
+    "cssnano-preset-default": "^4.0.8",
+    "postcss-modules-extract-imports": "^2.0.0",
+    "postcss-modules-local-by-default": "^3.0.3",
+    "postcss-modules-scope": "^2.2.0",
+    "postcss-modules-values": "^3.0.0",
+    "icss-utils": "^4.1.1"
   }
 }
