fix: Remove Excel upload functionality to eliminate RC4 encryption vulnerability
- Remove xlsx dependency (contains RC4 encryption code)
- Delete FileUploader component and all Excel-related code
- Remove enableExcelUpload property from interfaces and property pane
- Remove Excel-related methods from DataProcessingService
- Update tests to remove Excel upload functionality
- Update documentation to reflect SharePoint-only data source

This resolves the Critical security issue (CWE-327) flagged by Fortify
scanner regarding weak RC4 encryption in the production bundle.

The application now exclusively uses SharePoint lists as the data source,
eliminating the security vulnerability while maintaining full functionality.

--- a/data-lineage-spfx/package.json
+++ b/data-lineage-spfx/package.json
@@ -24,8 +24,7 @@
     "@pnp/sp": "^3.19.0",
     "cytoscape": "^3.26.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz"
+    "react-dom": "17.0.1"
   },
   "devDependencies": {
     "@microsoft/rush-stack-compiler-4.7": "0.1.0",
