--- a/data-lineage-spfx/package.json
+++ b/data-lineage-spfx/package.json
@@ -58,6 +58,10 @@
     "form-data": "^4.0.4",
     "got": "^11.8.6",
     "node-notifier": "^10.0.1",
+    "nth-check": "^2.0.1",
+    "postcss": "^8.4.31",
+    "autoprefixer": "^10.4.16",
+    "postcss-modules": "^4.0.0",
     "tmp": "^0.2.4",
     "validator": "^13.15.16",
     "yargs-parser": "^21.1.1",
@@ -68,8 +72,8 @@
     "request": "npm:@cypress/request@^3.0.5",
     "jsdom": "^25.0.1",
     "z-schema": "^6.0.2",
-    "cssnano": "^4.1.11",
-    "cssnano-preset-default": "^4.0.8",
+    "cssnano": "^5.1.2",
+    "cssnano-preset-default": "^5.0.3",
     "postcss-modules-extract-imports": "^2.0.0",
     "postcss-modules-local-by-default": "^3.0.3",
     "postcss-modules-scope": "^2.2.0",
